--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,131 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 @import 'variables';
 @import 'mixin';
 @import 'modules';
 
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+
+body {
+    font-family: "Raleway", sans-serif;
+    padding: 0;
+    header {
+        padding: 0 !important;
+        .navbar {
+            // background-color: red;
+            margin: 0;
+            height: 100px;
+            box-shadow: 0 4px 40px 3px rgba(0, 0, 0, 0.253);
+
+            .container {
+                display: flex;
+                justify-content: space-between;
+
+                .navbar-container {
+                    width: 100%;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+
+                    .navbar-social {
+                        display: flex;
+                        flex-direction: row;
+                        gap: 1rem;
+
+                        &_link {
+                            color: $fontColor;
+                            opacity: .3;
+                            transition: opacity .3s;
+
+                            &:hover {
+                                opacity: .6;
+                            }
+
+                            i{
+                                font-size: 1.5rem;
+                                
+                            }
+                        }
+                    }
+                    .navbar-collapse {
+                        justify-content: flex-end;
+                        .navbar-nav {
+                            .nav-item {
+                                .nav-link {
+                                    color: $fontColor;
+                                    text-transform: uppercase;
+                                    font-size: 1.5rem;
+                                    transition: transform .3s;
+
+                                    &:hover {
+                                        transform: translatey(-3px);
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .header-container {
+            // height: 860px;
+            position: relative;
+            padding: 0;
+            margin: 0;
+            
+
+            .header-img_wrapper {
+                background-color: rgba(0, 0, 0, 0.3);
+                height: 100%;
+                width: 100%;
+                color: $mainColor;
+                @include flex-col;
+                padding: 16rem 0;
+                
+
+                &__box {
+                    @include flex-col;
+                    gap: 2rem;
+
+                    h1 {
+                        font-size: 100px;
+                        text-align: center;
+                    }
+
+                    p {
+                        text-align: center;
+                        font-size: 1.5rem;
+                        width: 70%;
+                    }
+
+                    .btn {
+                        @include customBtn;
+                    }
+                }
+            }
+        }
+
+    }
+
+    section {
+        padding: 5rem 0;
+
+        h2 {
+            font-size: 1.5rem;
+            text-transform: uppercase;
+            margin: 1rem 0;
+            
+            .green {
+                font-size: 1.5rem;
+                color: $secondColor;
+            }
+        }
+    }
+}
