--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -2,3 +2,7 @@ $mainColor: #FFFFFF;
 $secondColor: #5C9EAD;
 $thirdColor: #E39774;
 $fontColor: #000;
+$footerColor: #081214;
+
+$fontMain: 'Raleway', sans-serif;
+$fontSec: 'Lato', sans-serif;
